// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearSelect 0 1`] = `undefined`;

exports[`createGroup 1 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "isIntlDes": true,
      "satId": 0,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 2 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "satId": undefined,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 3 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "satId": undefined,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 4 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "isIntlDes": true,
      "satId": undefined,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 5 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "satId": undefined,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 6 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "satId": undefined,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 7 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "isObjnum": true,
      "satId": 0,
    },
    Object {
      "isObjnum": true,
      "satId": 0,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`createGroup 8 1`] = `
SatGroup {
  "forEach": [Function],
  "hasSat": [Function],
  "sats": Array [
    Object {
      "satId": 0,
    },
    Object {
      "satId": 1,
    },
    Object {
      "satId": 2,
    },
  ],
  "updateOrbits": [Function],
}
`;

exports[`satGroup Tests 0 1`] = `true`;

exports[`satGroup Tests 1 1`] = `undefined`;

exports[`satGroup Tests 2 1`] = `undefined`;

exports[`selectGroup 0 1`] = `undefined`;

exports[`selectGroupNoOverlay 0 1`] = `undefined`;
